--- a/index.html
+++ b/index.html
@@ -9,11 +9,43 @@
 <body>
 
     <!-- Inizio intestazione  -->
-    <header></header>
+    <header>
+
+        <!-- Inizio menù di navigazione -->
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <!-- Fine menù di navigazione -->
+
+    </header>
     <!-- Fine intestazione -->
 
     <!-- Inizio corpo ddella pagina -->
-    <main></main>
+    <main>
+
+        <!-- Inizio sezione rossa -->
+        <section>
+    
+        </section>
+        <!-- Fine sezione rossa -->
+
+        <!-- Inizio sezione verde -->
+        <section>
+
+        </section>
+        <!-- Fine sezione verde -->
+
+        <!-- Inizio sezione gialla -->
+        <section>
+
+        </section>
+        <!-- Fine sezione gialla -->
+
+    </main>
     <!-- Fine corpo della pagina -->
 
     <!-- Inizio piè di pagina -->
