--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolean shop</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <!-- Inizio intestazione  -->
-    <header>
+    <header class="debug">
 
         <!-- Inizio menù di navigazione -->
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="#scarpa1">1</a>
+                </li>
+                <li>
+                    <a href="#scarpa2">2</a>
+                </li>
+                <li>
+                    <a href="#scarpa3">3</a>
+                </li>
             </ul>
         </nav>
         <!-- Fine menù di navigazione -->
@@ -28,19 +35,19 @@
     <main>
 
         <!-- Inizio sezione rossa -->
-        <section>
+        <section id="scarpa1">
     
         </section>
         <!-- Fine sezione rossa -->
 
         <!-- Inizio sezione verde -->
-        <section>
+        <section id="scarpa2">
 
         </section>
         <!-- Fine sezione verde -->
 
         <!-- Inizio sezione gialla -->
-        <section>
+        <section id="scarpa3">
 
         </section>
         <!-- Fine sezione gialla -->
