aggiusto classe header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Inizio intestazione  -->
-    <header class="debug">
+    <header class="main-header debug">
 
         <!-- Inizio menù di navigazione -->
         <nav>
