rimuovo il debug dal nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Inizio intestazione  -->
-    <header class="main-header debug">
+    <header class="main-header">
 
         <!-- Inizio menù di navigazione -->
         <nav>
@@ -32,7 +32,7 @@
     <!-- Fine intestazione -->
 
     <!-- Inizio corpo ddella pagina -->
-    <main>
+    <main class="debug">
 
         <!-- Inizio sezione rossa -->
         <section id="scarpa1">
