struttura dei box

--- a/index.html
+++ b/index.html
@@ -35,19 +35,21 @@
     <main class="debug">
 
         <!-- Inizio sezione rossa -->
-        <section id="scarpa1">
-    
+        <section id="scarpa1" class="box">
+            <div class="layover">
+                <h2>il nostro modello di punta</h2>
+            </div>
         </section>
         <!-- Fine sezione rossa -->
 
         <!-- Inizio sezione verde -->
-        <section id="scarpa2">
+        <section id="scarpa2" class="box">
 
         </section>
         <!-- Fine sezione verde -->
 
         <!-- Inizio sezione gialla -->
-        <section id="scarpa3">
+        <section id="scarpa3" class="box">
 
         </section>
         <!-- Fine sezione gialla -->
