Fine esercizio base

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
         <!-- Inizio sezione rossa -->
         <section id="scarpa1" class="box">
             <div class="layover">
-                <h2>il nostro modello di punta</h2>
+                <h2 class="yellow">il nostro modello di punta</h2>
             </div>
         </section>
         <!-- Fine sezione rossa -->
 
         <!-- Inizio sezione verde -->
         <section id="scarpa2" class="box">
-
+            <h2 class="yellow">il nostro modello di punta</h2>
         </section>
         <!-- Fine sezione verde -->
 
         <!-- Inizio sezione gialla -->
         <section id="scarpa3" class="box">
-
+            <h2 class="green">il nostro modello di punta</h2>
         </section>
         <!-- Fine sezione gialla -->
 
