correzioni finali e bonus

--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
 
         <!-- Inizio sezione verde -->
         <section id="scarpa2" class="box">
-            <h2 class="yellow">il nostro modello <br>di punta</h2>
+            <div class="layover">
+                <h2 class="yellow">il nostro modello <br>di punta</h2>
+            </div>
         </section>
         <!-- Fine sezione verde -->
 
         <!-- Inizio sezione gialla -->
         <section id="scarpa3" class="box">
-            <h2 class="green">il nostro modello <br>di punta</h2>
+            <div class="layover">
+                <h2 class="green">il nostro modello <br>di punta</h2>
+            </div>
         </section>
         <!-- Fine sezione gialla -->
 
